# dropclone

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: clone_config.hpp  clone_manager.hpp  drop_clone.hpp  dropclone.hpp  errorcode.hpp  exception.hpp  logger_manager.hpp  messagecode.hpp  utility.hpp
include/dropclone/: clone_config.hpp  clone_manager.hpp  clone_transaction.hpp  drop_clone.hpp  errorcode.hpp  exception.hpp  logger_manager.hpp  messagecode.hpp  nlohmann_json_parser.hpp  path_info.hpp  path_snapshot.hpp  utility.hpp
include/parsers/: nlohmann_json_parser.hpp
src/: CMakeLists.txt  bootstrap.cpp  clone_config.cpp  clone_manager.cpp  clone_transaction.cpp  drop_clone.cpp  dropclone.cpp  main.cpp  nlohmann_json_parser.cpp  path_snapshot.cpp  run_main.cpp
src/parsers/: nlohmann_json_parser.cpp
test/: CMakeLists.txt  clone_config_config_entry_test.cpp  clone_config_test.cpp  config_entry_test.cpp  nlohmann_json_parser_test.cpp  run_test.cpp
